_archive/content-services/5.1/glossary/glossary_s.md
---
author: [Alfresco Documentation, Alfresco Documentation]
source: 
---

# S

Glossary terms starting with the letter S.

[A](glossary_a.md) \| [B](glossary_b.md) \| [C](glossary_c.md) \| [D](glossary_d.md) \| [E](glossary_e.md) \| [F](glossary_f.md) \| [G](glossary_g.md) \| [H](glossary_h.md) \| [I](glossary_i.md) \| [J](glossary_j.md) \| [K](glossary_k.md) \| [L](glossary_l.md) \| [M](glossary_m.md) \| [N](glossary_n.md) \| [O](glossary_o.md) \| [P](glossary_p.md) \| [Q](glossary_q.md) \| [R](glossary_r.md) \| [S](glossary_s.md) \| [T](glossary_t.md) \| [U](glossary_u.md) \| [V](glossary_v.md) \| [W](glossary_w.md) \| [X](glossary_x.md) \| [Y](glossary_y.md) \| [Z](glossary_z.md)

-   **Sarbanes-Oxley Act**

    The Sarbanes-Oxley Act \(SOX\) is a U.S. law that was passed in 2002 to protect shareholders and the public from accounting errors and fraud in U.S. companies. For more information, see [http://www.soxlaw.com/](http://www.soxlaw.com/).

-   **SDK**

    An SDK \(Software Development Kit\) is a package of software or development tools that can be reused by developers to prevent duplication of effort and assist them in creating their application code.

-   **SharePoint**

    Microsoft SharePoint is a web application platform and framework for collaborating and managing documents. Installing Alfresco Office Services \(AOS\) allows the Microsoft Office Suite applications \(for example, Word, PowerPoint, Visio and Excel\) to interact with Alfresco similar to SharePoint.

-   **Simple and Protected GSSAPI Negotiation Mechanism**

    Simple and Protected GSSAPI Negotiation Mechanism \(SPNEGO\) is used by a client application to determine which authentication protocol a remote server supports. SPNEGO is a specification defined by [IETF RFC 2478](ftp://ftp.isi.edu/in-notes/rfc2478.txt).

-   **Single Sign-On \(SSO\)**

    Single Sign-On is an authentication process that allows a user to enter a single logon and password to access multiple software applications.

-   **site**

    A site is a collaborative area in Alfresco Share for a unit of work or a project.

-   **Smart Folder**

    A Smart Folder displays the results of a query in a folder format. It is “smart”, because there is no physical folder to represent it in the repository and the results are created dynamically. A Smart Folder can also contain a hierarchy of Smart Folders.

-   **Smart Folder Template**

    A Smart Folder Template is a JSON file that is stored in Alfresco in Repository/Data Dictionary/Smart Folder Templates. When the template is run in a physical folder, a Smart Folder structure is created.

-   **smart space**

    A smart space has rules defined for how the content is managed in that space. Typical rules include simple workflow, check-in/check-out, and versioning.

-   **Solr**

    Apache Solr is an open source enterprise search platform from the Apache Lucene project. See [http://lucene.apache.org/solr/](http://lucene.apache.org/solr/) for more information.

-   **SPNEGO**

    See Simple and Protected GSSAPI Negotiation Mechanism.

-   **Spring**

    Spring is an open-source application framework for Java/JEE. The Alfresco repository uses the Spring Framework as the core foundation of its architecture. Includes Spring AOP, Spring MVC, Spring Webflow and Spring Security.

-   **SSO**

    See Single Sign-On.

-   **store**

    A store is a logical partition within the repository, grouped for a particular automated use. Each store contains a hierarchy of nodes with one root node.

-   **Surf Platform**

    The Alfresco Surf Platform is a framework for web application and site assembly that bundles a full site construction object model and toolkit for building web applications.

    The Surf Platform is built to be very lightweight and can be built as a standalone WAR file. It is designed from the ground up to stand alone within the Web Tier. It includes the Alfresco Web Script Runtime so that application developers can build components, pages, and templates using the rich scripting and FreeMarker templating processing capabilities of Alfresco within in the Web Tier.

    The Surf Platform Freemarker Template and JavaScript API provides an extension to the existing Alfresco Freemarker Template and JavaScript API capabilities, including additional, root-scoped objects.

-   **SurfBug**

    SurfBug is an Alfresco debugging tool built into Alfresco Surf that displays a variety of information about the various components on a Surf page. As well as providing a visual indication of component location on the page, information about each component is provided, including relevant file names, properties, IDs, and sub-component details.


